--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -11,7 +11,7 @@
         android:right="64dp"
         />
 
-    <solid android:color="@color/navy_blue"
+    <solid android:color="@color/green_light"
     />
 
     <corners android:radius="@dimen/button_radius"
