--- a/app/src/main/res/layout/activity_game_details.xml
+++ b/app/src/main/res/layout/activity_game_details.xml
@@ -14,13 +14,14 @@
 
         <ImageView
             android:id="@+id/buttonLeft"
-            android:layout_width="@dimen/button_standard"
-            android:layout_height="@dimen/button_standard"
+            android:layout_width="@dimen/button_smaller"
+            android:layout_height="@dimen/button_smaller"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_back_white"
-            android:padding="@dimen/padding_toolbar"
             android:background="?selectableItemBackgroundBorderless"
-            />
+            android:padding="@dimen/padding_toolbar"
+            android:src="@drawable/ic_back_white" />
 
         <TextView
             android:id="@+id/textTitle"
@@ -36,6 +37,14 @@
             />
 
     </RelativeLayout>
+
+    <View
+        android:id="@+id/separatorTop"
+        android:layout_below="@id/layoutTopBar"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/black"
+        />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -66,7 +75,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:background="@drawable/background_button"
-                        android:textSize="22sp"
+                        android:textSize="20sp"
                         android:text="Start"
                         />
 
@@ -86,7 +95,7 @@
                     android:layout_marginTop="@dimen/margin_16"
                     android:textSize="20sp"
                     android:textColor="@color/black"
-                    tools:text="DESCRIPTION"
+                    android:text="DESCRIPTION"
                     fontPath="fonts/DINNextLTPro-Bold.otf"
                     android:textStyle="bold"
                     tools:ignore="MissingPrefix"
@@ -108,12 +117,12 @@
                         android:id="@+id/info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_8"
+                        android:layout_marginTop="@dimen/margin_16"
                         android:layout_marginLeft="@dimen/margin_16"
                         android:textSize="20sp"
-                        android:text="@color/black"
-                        tools:text="Aspirin can be a fatal poison. People are used to taking aspirin whenever they feel pain. It is true that aspirin is an efficacious pain-killer for example in headache cases. However, aspirin is like any other medicine can be dangerously harmful."
-                        fontPath="fonts/DINNextLTPro-Bold.otf"
+                        android:textColor="@color/black"
+                        android:text="Aspirin can be a fatal poison. People are used to taking aspirin whenever they feel pain. It is true that aspirin is an efficacious pain-killer for example in headache cases. However, aspirin is like any other medicine can be dangerously harmful."
+                        fontPath="fonts/DINNextLTPro-Regular.otf"
                         android:textStyle="bold"
                         tools:ignore="MissingPrefix"
                         />
@@ -136,12 +145,12 @@
                         android:id="@+id/steps"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_16"
+                        android:layout_marginTop="@dimen/margin_24"
                         android:layout_marginLeft="@dimen/margin_8"
                         android:textSize="20sp"
-                        android:text="@color/black"
-                        tools:text="600,900 steps"
-                        fontPath="fonts/DINNextLTPro-Bold.otf"
+                        android:textColor="@color/black"
+                        android:text="600,900 steps"
+                        fontPath="fonts/DINNextLTPro-Regular.otf"
                         android:textStyle="bold"
                         tools:ignore="MissingPrefix"
                         />
