--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black">
+    android:layout_height="match_parent">
 
         <RelativeLayout
             android:id="@+id/layoutTopBar"
@@ -23,10 +21,18 @@
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                tools:ignore="MissingPrefix"
-                tools:text="WalkInThePark" />
+                android:text="WalkInThePark"
+                tools:ignore="MissingPrefix" />
 
         </RelativeLayout>
+
+    <View
+        android:id="@+id/separatorTop"
+        android:layout_below="@id/layoutTopBar"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/black"
+        />
 
     <LinearLayout
         android:id="@+id/layoutBottomBar"
@@ -134,10 +140,19 @@
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/separatorBottom"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_above="@id/layoutBottomBar"
+        android:background="@color/gray_separator"
+        />
+
     <FrameLayout
         android:id="@+id/layoutContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bg_main_activity"
         android:layout_above="@id/layoutBottomBar"
         android:layout_below="@id/layoutTopBar"
         />
