--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_32">32dp</dimen>
     <dimen name="margin_64">64dp</dimen>
 
@@ -18,6 +19,7 @@
     <dimen name="padding_64">64dp</dimen>
 
     <dimen name="button_standard">48dp</dimen>
+    <dimen name="button_smaller">40dp</dimen>
     <dimen name="button_radius">48dp</dimen>
     <dimen name="button_radius_small">8dp</dimen>
     <dimen name="spacer">8dp</dimen>
