--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,9 @@
     <color name="pink_dark">#FF1493</color>
     <color name="pink_light">#FFC0CB</color>
 
+    <color name="yellow">#FFE84C</color>
+    <color name="blue">#9DDAD2</color>
+
 </resources>
 
 <!-- To note BS!: Change below for special preferences.
