--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -3,28 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/leaderboard_bg">
 
     <com.jaredrummler.materialspinner.MaterialSpinner
         android:id="@+id/spinner"
-        android:layout_marginTop="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_32"
         android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/margin_16"
-        android:layout_marginRight="@dimen/margin_16"
+        android:layout_marginLeft="@dimen/margin_32"
+        android:layout_marginRight="@dimen/margin_32"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        android:text="Routes"/>
 
     <RelativeLayout
+        android:id="@+id/text_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_64"
         android:paddingStart="40dp"
         android:paddingLeft="40dp">
 
@@ -45,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_below="@+id/text"
+            android:layout_marginTop="@dimen/neg_margin_16"
             android:textSize="40sp"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -54,8 +52,14 @@
             />
     </RelativeLayout>
 
-
-
+    <View
+        android:id="@+id/separator_white"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_marginBottom="@dimen/margin_16"
+        android:layout_below="@+id/route_name"
+        android:background="@drawable/separator_white_horizontal"
+        />
 
     <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -64,14 +68,15 @@
         android:id="@+id/rootView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_16"
+        android:layout_marginLeft="@dimen/margin_16"
+        android:layout_marginRight="@dimen/margin_16"
         android:background="@color/black"
         app:corner_radius="16dp">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="480px"
+            android:layout_height="360px"
             tools:background="@color/white"
             />
 
@@ -83,7 +88,7 @@
             android:paddingStart="@dimen/dp_10"
             android:paddingEnd="@dimen/dp_10"
             android:layout_centerVertical="true"
-            android:textSize="40sp"
+            android:textSize="30sp"
             android:textColor="@color/black"
             android:textStyle="bold"
             tools:text="1"
@@ -109,7 +114,7 @@
                 android:id="@+id/name"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textSize="40sp"
+                android:textSize="30sp"
                 android:textColor="@color/black"
                 tools:text="Khi Kai Kai"
                 fontPath="fonts/DINNextLTPro-Bold.otf"
@@ -120,29 +125,64 @@
                 android:id="@+id/rank"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textColor="@color/black"
                 tools:text="Sibei Zai Kia"
-                fontPath="fonts/DINNextLTPro-Bold.otf"
+                fontPath="fonts/DINNextLTPro-Regular.otf"
                 tools:ignore="MissingPrefix"
                 />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/steps"
-            android:layout_height="wrap_content"
+
+        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_16"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:paddingRight="@dimen/dp_10"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            tools:text="STEPS"
-            fontPath="fonts/DINNextLTPro-Bold.otf"
-            tools:ignore="MissingPrefix"
-            />
+            android:background="@color/yellow"
+            app:corner_radius="20dp">
+
+            <ImageView
+                android:id="@+id/step_image"
+                android:layout_width="160px"
+                android:layout_height="120px"
+                tools:background="@color/yellow"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerInParent="true">
+
+                <TextView
+                    android:id="@+id/steps_num"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    tools:text="12,000"
+                    fontPath="fonts/DINNextLTPro-Bold.otf"
+                    tools:ignore="MissingPrefix"
+                    />
+
+                <TextView
+                    android:id="@+id/steps"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:textSize="10sp"
+                    android:textColor="@color/black"
+                    tools:text="STEPS"
+                    fontPath="fonts/DINNextLTPro-Bold.otf"
+                    tools:ignore="MissingPrefix"
+                    />
+            </LinearLayout>
 
 
+        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
     </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
 
     <android.support.v7.widget.RecyclerView
