--- a/app/src/main/res/layout/item_checkpoint_list.xml
+++ b/app/src/main/res/layout/item_checkpoint_list.xml
@@ -21,9 +21,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/margin_16">
-
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/buttonIndicator"
@@ -34,7 +32,7 @@
             android:text="1"
             android:textSize="20sp"
             android:gravity="center"
-            android:layout_marginTop="@dimen/margin_4"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/margin_16"
             android:textColor="@color/white"/>
 
@@ -45,6 +43,8 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:text="Singapore Museum"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/buttonIndicator"
             android:layout_marginLeft="@dimen/margin_16"
             android:textColor="@color/black"
@@ -53,48 +53,46 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/buttonIndicator"
-            android:layout_below="@id/checkPointTitle"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/buttonCheck"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="-16dp"
-                android:paddingRight="-16dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:visibility="visible"
+                android:layout_alignParentRight="true"
                 android:src="@drawable/ic_check_btn"
                 />
 
             <ImageView
                 android:id="@+id/buttonHint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
                 android:src="@drawable/ic_hint_btn"
-                android:paddingLeft="-16dp"
                 android:visibility="visible"
-                android:paddingRight="-16dp"
                 />
 
             <ImageView
                 android:id="@+id/buttonInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="-16dp"
-                android:paddingRight="-16dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:visibility="visible"
+                android:layout_alignParentRight="true"
                 android:src="@drawable/ic_info_btn"/>
 
         </LinearLayout>
 
 
         <ImageView
+            android:id="@+id/lockIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:src="@drawable/ic_lock"/>
-
 
     </RelativeLayout>
 
