--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,16 @@
         <item name="colorControlActivated">@color/white</item>
     </style>
 
+    <style name="WalkInTheParkBlueButton" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/background_button_capsule_blue</item>
+        <item name="fontPath">fonts/OpenSans-SemiBold.ttf</item>
+    </style>
+
+    <style name="WalkInTheParkBottomBlueButton" parent="@style/WalkInTheParkBlueButton">
+        <item name="android:background">@drawable/background_blue_button</item>
+    </style>
+
 </resources>
