--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_below="@+id/text"
-            android:layout_marginTop="@dimen/neg_margin_16"
+            android:layout_marginTop="@dimen/neg_margin_8"
             android:textSize="40sp"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -61,24 +61,13 @@
         android:background="@drawable/separator_white_horizontal"
         />
 
-    <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:id="@+id/rootView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16"
         android:layout_marginRight="@dimen/margin_16"
-        android:background="@color/black"
-        app:corner_radius="16dp">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="360px"
-            tools:background="@color/white"
-            />
+        android:background="@drawable/top_player_leaderboard">
 
         <TextView
             android:id="@+id/position"
@@ -91,6 +80,7 @@
             android:textSize="30sp"
             android:textColor="@color/black"
             android:textStyle="bold"
+            android:visibility="visible"
             tools:text="1"
             fontPath="fonts/DINNextLTPro-Bold.otf"
             tools:ignore="MissingPrefix"
@@ -103,6 +93,8 @@
             android:layout_toEndOf="@+id/position"
             android:layout_toRightOf="@+id/position"
             android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/margin_32"
+            android:layout_marginBottom="@dimen/margin_32"
             android:paddingStart="@dimen/dp_10"
             android:paddingLeft="@dimen/dp_10"
             android:paddingEnd="@dimen/dp_10"
@@ -175,15 +167,13 @@
                     android:layout_gravity="center"
                     android:textSize="10sp"
                     android:textColor="@color/black"
-                    tools:text="STEPS"
+                    tools:text="POINTS"
                     fontPath="fonts/DINNextLTPro-Bold.otf"
                     tools:ignore="MissingPrefix"
                     />
             </LinearLayout>
-
-
         </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
-    </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
