--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="margin_2">2dp</dimen>
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
+    <dimen name="neg_margin_8">-8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="neg_margin_16">-16dp</dimen>
     <dimen name="margin_24">24dp</dimen>
