--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -74,14 +74,14 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:gravity="center"
-            android:paddingStart="@dimen/dp_10"
+            android:paddingStart="@dimen/dp_20"
             android:paddingEnd="@dimen/dp_10"
             android:layout_centerVertical="true"
             android:textSize="30sp"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:visibility="visible"
-            tools:text="1"
+            android:text="1"
             fontPath="fonts/DINNextLTPro-Bold.otf"
             tools:ignore="MissingPrefix"
             />
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:textSize="30sp"
                 android:textColor="@color/black"
-                tools:text="Khi Kai Kai"
+                android:text="Khi Kai Kai"
                 fontPath="fonts/DINNextLTPro-Bold.otf"
                 tools:ignore="MissingPrefix"
                 />
@@ -119,9 +119,10 @@
                 android:layout_width="wrap_content"
                 android:textSize="18sp"
                 android:textColor="@color/black"
-                tools:text="Sibei Zai Kia"
+                android:text="Sibei Zai Kia"
                 fontPath="fonts/DINNextLTPro-Regular.otf"
                 tools:ignore="MissingPrefix"
+                android:visibility="gone"
                 />
         </LinearLayout>
 
@@ -155,6 +156,7 @@
                     android:layout_width="wrap_content"
                     android:textSize="15sp"
                     android:textColor="@color/black"
+                    android:layout_gravity="center"
                     tools:text="12,000"
                     fontPath="fonts/DINNextLTPro-Bold.otf"
                     tools:ignore="MissingPrefix"
@@ -167,7 +169,7 @@
                     android:layout_gravity="center"
                     android:textSize="10sp"
                     android:textColor="@color/black"
-                    tools:text="POINTS"
+                    android:text="POINTS"
                     fontPath="fonts/DINNextLTPro-Bold.otf"
                     tools:ignore="MissingPrefix"
                     />
