--- a/app/src/main/res/drawable/separator.xml
+++ b/app/src/main/res/drawable/separator.xml
@@ -6,6 +6,7 @@
         android:shape="line">
         <stroke
             android:width="2dp"
+            android:height="40dp"
             android:color="@color/black"
             android:dashWidth="5dp"
             />
