--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -15,13 +15,14 @@
         android:layout_marginRight="@dimen/margin_32"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Routes"/>
+        android:text="Routes"
+        android:textSize="13sp"/>
 
     <RelativeLayout
         android:id="@+id/text_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_64"
+        android:layout_marginTop="@dimen/margin_32"
         android:paddingStart="40dp"
         android:paddingLeft="40dp">
 
@@ -29,9 +30,9 @@
             android:id="@+id/text"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textSize="18sp"
+            android:textSize="13sp"
             android:textColor="@color/black"
-            tools:text="Top walkers on route:"
+            android:text="Top walkers on route:"
             fontPath="fonts/DINNextLTPro-Bold.otf"
             tools:ignore="MissingPrefix"
             />
@@ -46,7 +47,7 @@
             android:textSize="40sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            tools:text="Around SMU"
+            android:text="Around SMU"
             fontPath="fonts/DINNextLTPro-Bold.otf"
             tools:ignore="MissingPrefix"
             />
@@ -70,6 +71,8 @@
         android:background="@drawable/top_player_leaderboard">
 
         <TextView
+            android:layout_marginTop="@dimen/dp_40"
+            android:layout_marginBottom="@dimen/dp_40"
             android:id="@+id/position"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -106,10 +109,10 @@
                 android:id="@+id/name"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textColor="@color/black"
                 android:text="Khi Kai Kai"
-                fontPath="fonts/DINNextLTPro-Bold.otf"
+                fontPath="fonts/DINNextLTPro-Medium.otf"
                 tools:ignore="MissingPrefix"
                 />
 
@@ -135,7 +138,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@color/yellow"
-            app:corner_radius="20dp">
+            app:corner_radius="16dp">
 
             <ImageView
                 android:id="@+id/step_image"
@@ -148,6 +151,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_margin="@dimen/dp_10"
+                android:layout_marginLeft="@dimen/dp_80"
+                android:layout_marginRight="@dimen/dp_80"
                 android:layout_centerInParent="true">
 
                 <TextView
@@ -167,6 +173,8 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/margin_16"
+                    android:layout_marginEnd="@dimen/margin_16"
                     android:textSize="10sp"
                     android:textColor="@color/black"
                     android:text="POINTS"
@@ -181,6 +189,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_16"
+        android:layout_marginRight="@dimen/margin_16"
         android:clipToPadding="false"
         android:paddingBottom="@dimen/padding_8"
         android:paddingTop="@dimen/padding_8"
