--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,9 @@
     <dimen name="line_space">2dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_20">20dp</dimen>
+    <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
 
     <dimen name="margin_2">2dp</dimen>
     <dimen name="margin_4">4dp</dimen>
