--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,68 +43,95 @@
         android:baselineAligned="false"
         android:background="@color/white">
 
-    <LinearLayout
-        android:id="@+id/buttonLeaderboard"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="?selectableItemBackground"
-        android:orientation="vertical"
-        android:gravity="center">
+        <LinearLayout
+            android:id="@+id/buttonLeaderboard"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:orientation="vertical"
+            android:gravity="center">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_bottom_bar_image">
-
-            <ImageView
-                android:id="@+id/imageLeaderboard"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_leaderboard_active"
+                android:layout_height="@dimen/height_bottom_bar_image">
+
+                <ImageView
+                    android:id="@+id/imageLeaderboard"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_leaderboard_active"
+                    />
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/textLeaderboard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:text="@string/app_bottom_bar_leaderboard"
+                android:gravity="center"
                 />
 
-        </RelativeLayout>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textLeaderboard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:text="@string/app_bottom_bar_leaderboard"
-            android:gravity="center"
-            />
+        <LinearLayout
+            android:id="@+id/buttonRoute"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:orientation="vertical"
+            android:gravity="center">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/imageRoute"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_bottom_bar_image"
+                android:src="@drawable/ic_routes_active"
+                />
 
-    <LinearLayout
-        android:id="@+id/buttonRoute"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="?selectableItemBackground"
-        android:orientation="vertical"
-        android:gravity="center">
+            <TextView
+                android:id="@+id/textRoute"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:text="@string/app_bottom_bar_route"
+                android:gravity="center"
+                />
 
-        <ImageView
-            android:id="@+id/imageRoute"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_bottom_bar_image"
-            android:src="@drawable/ic_routes_active"
-            />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textRoute"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:text="@string/app_bottom_bar_route"
-            android:gravity="center"
-            />
+        <LinearLayout
+            android:id="@+id/buttonGroup"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:orientation="vertical"
+            android:gravity="center">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/imageGroup"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_bottom_bar_image"
+                android:src="@drawable/ic_routes_active"
+                />
 
-    <LinearLayout
+            <TextView
+                android:id="@+id/textGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:text="@string/app_bottom_bar_group"
+                android:gravity="center"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
         android:id="@+id/buttonAccount"
         android:layout_width="0dp"
         android:layout_height="match_parent"
