--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -61,139 +61,146 @@
         android:layout_below="@+id/route_name"
         android:background="@drawable/separator_white_horizontal"
         />
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/rootView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16"
-        android:layout_marginRight="@dimen/margin_16"
-        android:background="@drawable/top_player_leaderboard">
-
-        <TextView
-            android:layout_marginTop="@dimen/dp_40"
-            android:layout_marginBottom="@dimen/dp_40"
-            android:id="@+id/position"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:gravity="center"
-            android:paddingStart="@dimen/dp_20"
-            android:paddingEnd="@dimen/dp_10"
-            android:layout_centerVertical="true"
-            android:textSize="30sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:visibility="visible"
-            android:text="1"
-            fontPath="fonts/DINNextLTPro-Bold.otf"
-            tools:ignore="MissingPrefix"
-            />
-
-        <LinearLayout
-            android:id="@+id/player"
+        <RelativeLayout
+            android:id="@+id/rootView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/position"
-            android:layout_toRightOf="@+id/position"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="@dimen/margin_32"
-            android:layout_marginBottom="@dimen/margin_32"
-            android:paddingStart="@dimen/dp_10"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingEnd="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
-            android:orientation="vertical"
-            >
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_marginRight="@dimen/margin_16"
+            android:background="@drawable/top_player_leaderboard"
+            android:visibility="invisible">
 
             <TextView
-                android:id="@+id/name"
+                android:layout_marginTop="@dimen/dp_40"
+                android:layout_marginBottom="@dimen/dp_40"
+                android:id="@+id/position"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textSize="25sp"
+                android:gravity="center"
+                android:paddingStart="@dimen/dp_20"
+                android:paddingEnd="@dimen/dp_10"
+                android:layout_centerVertical="true"
+                android:textSize="30sp"
                 android:textColor="@color/black"
-                android:text="Khi Kai Kai"
-                fontPath="fonts/DINNextLTPro-Medium.otf"
+                android:textStyle="bold"
+                android:visibility="visible"
+                android:text="1"
+                fontPath="fonts/DINNextLTPro-Bold.otf"
                 tools:ignore="MissingPrefix"
-                />
-
-            <TextView
-                android:id="@+id/rank"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:text="Sibei Zai Kia"
-                fontPath="fonts/DINNextLTPro-Regular.otf"
-                tools:ignore="MissingPrefix"
-                android:visibility="gone"
-                />
-        </LinearLayout>
-
-
-        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_16"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@color/yellow"
-            app:corner_radius="16dp">
-
-            <ImageView
-                android:id="@+id/step_image"
-                android:layout_width="160px"
-                android:layout_height="120px"
-                tools:background="@color/yellow"
                 />
 
             <LinearLayout
+                android:id="@+id/player"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/position"
+                android:layout_toRightOf="@+id/position"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/margin_32"
+                android:layout_marginBottom="@dimen/margin_32"
+                android:paddingStart="@dimen/dp_10"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingEnd="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10"
                 android:orientation="vertical"
-                android:layout_margin="@dimen/dp_10"
-                android:layout_marginLeft="@dimen/dp_80"
-                android:layout_marginRight="@dimen/dp_80"
-                android:layout_centerInParent="true">
+                >
 
                 <TextView
-                    android:id="@+id/steps_num"
+                    android:id="@+id/name"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:textSize="15sp"
+                    android:textSize="25sp"
                     android:textColor="@color/black"
-                    android:layout_gravity="center"
-                    tools:text="12,000"
-                    fontPath="fonts/DINNextLTPro-Bold.otf"
+                    android:text="Khi Kai Kai"
+                    fontPath="fonts/DINNextLTPro-Medium.otf"
                     tools:ignore="MissingPrefix"
                     />
 
                 <TextView
-                    android:id="@+id/steps"
+                    android:id="@+id/rank"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/margin_8"
-                    android:layout_marginEnd="@dimen/margin_8"
-                    android:textSize="10sp"
+                    android:textSize="18sp"
                     android:textColor="@color/black"
-                    android:text="POINTS"
-                    fontPath="fonts/DINNextLTPro-Bold.otf"
+                    android:text="Sibei Zai Kia"
+                    fontPath="fonts/DINNextLTPro-Regular.otf"
                     tools:ignore="MissingPrefix"
+                    android:visibility="gone"
                     />
             </LinearLayout>
-        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
-    </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16"
-        android:layout_marginRight="@dimen/margin_16"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/padding_8"
-        android:paddingTop="@dimen/padding_8"
-        android:scrollbars="none" />
+
+            <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_16"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@color/yellow"
+                app:corner_radius="16dp">
+
+                <ImageView
+                    android:id="@+id/step_image"
+                    android:layout_width="160px"
+                    android:layout_height="120px"
+                    tools:background="@color/yellow"
+                    />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="@dimen/dp_10"
+                    android:layout_marginLeft="@dimen/dp_80"
+                    android:layout_marginRight="@dimen/dp_80"
+                    android:layout_centerInParent="true">
+
+                    <TextView
+                        android:id="@+id/steps_num"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center"
+                        tools:text="12,000"
+                        fontPath="fonts/DINNextLTPro-Bold.otf"
+                        tools:ignore="MissingPrefix"
+                        />
+
+                    <TextView
+                        android:id="@+id/steps"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/margin_8"
+                        android:layout_marginEnd="@dimen/margin_8"
+                        android:textSize="10sp"
+                        android:textColor="@color/black"
+                        android:text="POINTS"
+                        fontPath="fonts/DINNextLTPro-Bold.otf"
+                        tools:ignore="MissingPrefix"
+                        />
+                </LinearLayout>
+            </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_marginRight="@dimen/margin_16"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/padding_8"
+            android:paddingTop="@dimen/padding_8"
+            android:scrollbars="none" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
