--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <RelativeLayout
         android:id="@+id/gameImage"
@@ -82,11 +83,12 @@
            </LinearLayout>
 
            <TextView
+               android:id="@+id/stepCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/steps"
                android:text="25,000"
-               android:textSize="40sp"
+               android:textSize="35sp"
                android:textColor="@color/light_blue"
                fontPath="fonts/DINNextLTPro-Bold.otf"
                android:textStyle="bold"
@@ -126,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/calories"
                 android:text="1,800 cal"
-                android:textSize="40sp"
+                android:textSize="35sp"
                 android:textColor="@color/light_blue"
                 fontPath="fonts/DINNextLTPro-Bold.otf"
                 android:textStyle="bold"
@@ -170,7 +172,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/points"
                 android:text="1200"
-                android:textSize="40sp"
+                android:textSize="35sp"
                 android:textColor="@color/light_blue"
                 fontPath="fonts/DINNextLTPro-Bold.otf"
                 android:textStyle="bold"
@@ -182,7 +184,7 @@
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_16">
+            android:layout_marginEnd="@dimen/margin_32">
 
             <LinearLayout
                 android:id="@+id/tvTimeSpent"
@@ -210,7 +212,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvTimeSpent"
                 android:text="01:20hrs"
-                android:textSize="40sp"
+                android:textSize="35sp"
                 android:textColor="@color/light_blue"
                 fontPath="fonts/DINNextLTPro-Bold.otf"
                 android:textStyle="bold"
@@ -226,7 +228,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_32"
-        android:layout_marginRight="@dimen/margin_32">
+        android:layout_marginRight="@dimen/margin_32"
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/completed_routes"
