--- a/app/src/main/res/layout/item_generic_list.xml
+++ b/app/src/main/res/layout/item_generic_list.xml
@@ -38,7 +38,8 @@
         android:layout_alignParentRight="true"
         android:text="Recommended"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     </RelativeLayout>
 
