profile page bug fix, give up button icon updated

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -327,7 +327,7 @@
                     android:id="@+id/textStepsLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Steps left to clock in "
+                    android:text="Monthly Steps ("
                     android:layout_marginLeft="@dimen/dp_20"
                     android:textSize="20sp"
                     android:textColor="@color/black"
@@ -354,7 +354,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/currentMonth"
-                    android:text=": "
+                    android:text="): "
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     fontPath="fonts/DINNextLTPro-Bold.otf"
@@ -375,7 +375,7 @@
                     android:id="@+id/currentSteps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="60000"
+                    android:text="75"
                     android:textSize="35sp"
                     android:textColor="@color/purple_grey"
                     fontPath="fonts/DINNextLTPro-Bold.otf"
@@ -412,6 +412,7 @@
             android:id="@+id/barChart"
             android:layout_width="match_parent"
             android:layout_height="240dp"
+                android:layout_marginTop="@dimen/dp_10"
                 android:layout_below="@id/stepsToTake"
             />
 
